@@ -33,6 +33,7 @@ import java.util.Collection;
 import java.util.Locale;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 import javax.swing.BorderFactory;
 import javax.swing.Box;
@@ -388,7 +389,7 @@ public class MultiplayerDialog extends JDialog
 
     private static Collection<Media> wrap(Collection<Media> media)
     {
-        return media.stream().map(MultiplayerDialog::wrap).sorted().toList();
+        return media.stream().map(MultiplayerDialog::wrap).sorted().collect(Collectors.toList());
     }
 
     private static Media wrap(Media media)
